<resources>
    <string name="app_name">CryptoCoinApp</string>
    <string name="icon">icon</string>
    <string name="home">home</string>
    <string name="market">market</string>
    <string name="features">features</string>
    <string name="wallet">wallet</string>
    <string name="my_portfolios">My Portfolios</string>
    <string name="see_all">See all</string>
    <string name="in_wallet">In Wallet</string>
    <string name="_0_btc">0 BTC</string>
    <string name="_0_00">$ 0.00</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="_0_16">0.16%</string>
    <string name="favorites">Favorites</string>
    <string name="spot">Spot</string>
    <string name="futures">Futures</string>
    <string name="zones">Zones</string>
    <string name="profile">profile</string>
    <string name="wallet_title">Wallet</string>
    <string name="total_balance">Total balance</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="swap">Swap</string>
    <string name="avatar">Avatar</string>
    <string name="krupich_dmitro">Krupich Dmitro</string>
    <string name="krupich_gmail_com">krupich@gmail.com</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="my_balance">My balance</string>
    <string name="analytics">Analytics</string>
    <string name="sell_crypto">Sell Crypto</string>
    <string name="send_crypto">Send Crypto</string>
    <string name="log_out">Log out</string>
</resources>