<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BTC / USD" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iconImageView"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:text="$ 25000.00" />

    <TextView
        android:id="@+id/volumeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/iconImageView"
        app:layout_constraintTop_toBottomOf="@id/priceTextView"
        tools:text="up 810%" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graphicView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconImageView" />

    <TextView
        android:id="@+id/inWalletTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/in_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graphicView" />

    <TextView
        android:id="@+id/sumInWalletTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/_0_btc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inWalletTextView" />

    <TextView
        android:id="@+id/totalSumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inWalletTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sellButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buyButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sellButton"
        tools:layout_editor_absoluteY="660dp" />
</androidx.constraintlayout.widget.ConstraintLayout>